@@ -1,5 +1,11 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2006-08-31 patrickh     Callers of DPP_ABI_SETUP can now override the default
+                        set of architectures targeted when making universal
+                        binaries on Mac OS X.
+                        NEW VERSION: 2.1.3
+2006-07-10 patrickh     Added compiler detection macros for Objective-C
+                        (DPP_PROG_OBJC) and Objective-C++ (DPP_PROG_OBJCXX).
 2006-06-25 patrickh     Added support for universal binaries on Mac OS X.
                         NEW VERSION: 2.1.2
 2006-06-25 patrickh     Use libtool(1) instead of ar(1) on Mac OS X.
